tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_to_const_int8.fg
/; EXPECT_ERROR: InvalidAssignmentToConstantVariable
const x:int8 = 10
x = 20

